# NumericalMethods3

./: Ature_CoefficientsAlpha=0.txt  Ature_CoefficientsAlpha=1.txt  CMakeLists.txt  CentralRectGamma_k.txt  CentralRectR_k.txt  SympsonGamma_k.txt  SympsonR_k.txt  TrapezeGamma_k.txt  TrapezeR_k.txt  report.md
Methods/: Ature_Coefficients.h  CentralRect.h  GaussCheb.h  GaussKristoff.h  GaussLag.h  GaussLeg.h  GeneralInteg.h  Newton_Kotes.h  Sympson.h  Trapeze.h
Task2/: Task2.cpp
Task3/: Task3.cpp
